# brainfuck-interpreter

./: CHANGELOG.md  README.md  brainfuck-interpreter.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: alphabet.bf  easter_egg.bf  name.bf  subtract.bf
src/: Interpreter.hs  Main.hs  Parser.hs
