cabal-version:       >=1.10
name:                brainfuck-interpreter
version:             0.1.0.1
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable brainfuck-parser
  main-is:             Main.hs
  other-modules:       Parser, Interpreter
  hs-source-dirs:      src
  build-depends:       base >=4.13 && <5,
                       containers
  default-language:    Haskell2010
